# tank-game

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .scripter_config.json  .scripter_config_linux.json  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-game-ubuntu-clang.yml  build-game-ubuntu-emscripten.yml  build-game-ubuntu-fake-network.yml  build-game-ubuntu.yml  build-game-windows.yml  check-clang-format.yml  trace-build-time-ubuntu-clang.yml
cmake/: FindSDL2_image.cmake
config/class_descriptions/Components/: AnimationClipCreatorComponent.json  AnimationClipsComponent.json  AnimationGroupCreatorComponent.json  AnimationGroupsComponent.json  BackgroundTextureComponent.json  CharacterStateComponent.json  ClientGameDataComponent.json  ClientInputHistoryComponent.json  ClientMovesHistoryComponent.json  ClientNetworkInterface.json  ClientNetworkMessages.json  CollisionComponent.json  ConnectionManagerComponent.json  DeathComponent.json  DebugDrawComponent.json  GameplayCommandFactoryComponent.json  GameplayCommandHistory.json  GameplayCommandsComponent.json  GameplayInputComponent.json  HealthComponent.json  HitByProjectile.json  ImguiComponent.json  InputHistoryComponent.json  MoveInterpolationComponent.json  MovementComponent.json  NetworkEntityIdGeneratorComponent.json  NetworkIdComponent.json  NetworkIdMappingComponent.json  NetworkOwnedEntitiesComponent.json  ProjectileComponent.json  RenderAccessorComponent.json  RenderModeComponent.json  RollbackOnCollision.json  ServerConnectionsComponent.json  ServerNetworkInterface.json  SpriteCreatorComponent.json  SpriteRenderComponent.json  StateMachineComponent.json  TileGridComponent.json  TileGridCreatorComponent.json  (+5 more)
config/class_descriptions/Enums/: CharacterState.json  CharacterStateBlackboardKeys.json  Direction4.json  HullType.json  MoveDirection4.json  OptionalDirection4.json  ResourceType.json
config/code_generation/components/: attribute_templates.json  component_templates.json  files_to_generate.json  generator_configuration.json
config/code_generation/enums/: attribute_templates.json  enum_templates.json  files_to_generate.json  generator_configuration.json  generator_description.json
config/code_generation/string_ids/: files_to_generate.json  generator_configuration.json
editor/: CMakeLists.txt
editor/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
editor/src/componenteditcontent/: abstracteditfactory.h  componentcontentfactory.cpp  componentcontentfactory.h  componentregistration.h  editablecomponentsset.h  typeseditconstructor.h
editor/src/editorcommands/: addcomponentcommand.cpp  addcomponentcommand.h  addentitycommand.cpp  addentitycommand.h  addentitygroupcommand.cpp  addentitygroupcommand.h  addspatialentitycommand.cpp  addspatialentitycommand.h  changeentitygrouplocationcommand.cpp  changeentitygrouplocationcommand.h  editorcommandsstack.cpp  editorcommandsstack.h  removecomponentcommand.cpp  removecomponentcommand.h  removeentitiescommand.cpp  removeentitiescommand.h
editor/src/editorutils/: componentreference.h  componentreferenceutils.cpp  componentreferenceutils.h  entityreferenceutils.cpp  entityreferenceutils.h  worldsaveutils.cpp  worldsaveutils.h
editor/src/toolboxes/: ComponentAttributesToolbox.cpp  ComponentAttributesToolbox.h  ComponentsListToolbox.cpp  ComponentsListToolbox.h  EntitiesListToolbox.cpp  EntitiesListToolbox.h  PrefabListToolbox.cpp  PrefabListToolbox.h  TransformEditorToolbox.cpp  TransformEditorToolbox.h
resources/atlas/: atlas-list.json  game-textures.json
resources/autotests/shoot/: input_1.rawinput
resources/maps/: test.json
resources/scripts/config/: state_machines.lua
resources/shaders/: simple_mesh.vsh  triangle.psh  triangle.vsh
resources/tilesets/: game-textures.tsj  game-textures.tsx  level1-map.tmj  level1-map.tmx  level10-map.tmj  level2-map.tmj  level3-map.tmj  level4-map.tmj  level5-map.tmj  level6-map.tmj  level7-map.tmj  level8-map.tmj  level9-map.tmj
resources/unittests/: AngelScript-InvalidScript.as  AngelScript-ScriptRaisingException.as  AngelScript-ValidScript.as  LuaInstance-InvalidScript.lua  LuaInstance-ValidScript.lua
resources/web-assets/: GameMain.html
scripts/: generate_dedicated_server_vs2022_project.cmd  generate_game_vs2022_project.cmd  open_game_vs_solution.cmd
scripts/package/: build_and_prepare_dedicated_server.sh
scripts/scripter/linux/: build_project.sh  generate_cmake_project.sh  open_clion.sh
scripts/scripter/windows/: build_project.cmd  generate_vs_project.cmd  open_vs_solution.cmd  run_unit_tests.cmd  switch_branch.cmd
scripts/tests/: run_all_autotests.sh
scripts/validate/: run-clang-format.py
src/AutoTests/: AutoTests.cpp  AutoTests.h  BaseTestCase.cpp  BaseTestCase.h  BasicTestChecks.h  TestCheckList.h  TestChecklist.h  TestChecks.h  tests_main.cpp
src/AutoTests/Network/: BaseNetworkingTestCase.cpp  BaseNetworkingTestCase.h
src/AutoTests/SimulateGameWithRecordedInput/: TestCase.cpp  TestCase.h
src/AutoTests/Utils/: UpdateLagger.cpp  UpdateLagger.h
src/Base/: CompilerHelpers.h  TimeConstants.h  precomp.h
src/Base/Debug/: Assert.cpp  Assert.h  ConcurrentAccessDetector.h  Log.cpp  Log.h  MemoryLeakDetection.cpp  MemoryLeakDetection.h
src/Base/Math/: Float.cpp  Float.h  ValueCompression.h
src/Base/Profile/: ScopedProfiler.h
src/GameData/: EcsDefinitions.h  GameData.cpp  GameData.h  LogCategories.h  World.cpp  World.h  WorldLayer.cpp  WorldLayer.h
src/GameLogic/: Game.cpp  Game.h  HapGame.cpp  HapGame.h  TankGame.cpp  TankGame.h
src/GameMain/: ConsoleCommands.cpp  ConsoleCommands.h  main.cpp
src/HAL/: EngineFwd.h  GameBase.cpp  GameBase.h  IGame.h  InputControllersData.h  KeyStatesMap.h
src/UnitTests/: TestAssertHelper.h  tests_main.cpp
src/WebAssembly/: web_main.cpp
tools/: generate_dedicated_server_vs2022_project.cmd
tools/package/: build_and_prepare_dedicated_server.sh
tools/perf/: build_time_trace_linux.sh  frame_duration_compare.py
tools/tests/: run_all_autotests.sh
tools/validate/: run-clang-format.py
(+573 files in other folders)
